<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/simple_calculator"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-condensed-light"/>

    <EditText
        android:id="@+id/et_a"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/enter_first_number" />

    <EditText
        android:id="@+id/et_b"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/enter_second_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/round_square"
            android:backgroundTint="@color/faintblue"
            android:text="@string/add"
            android:textColor="@color/eerieblack"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/round_square"
            android:backgroundTint="@color/faintblue"
            android:text="@string/subtract"
            android:textColor="@color/eerieblack"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/round_square"
            android:backgroundTint="@color/faintblue"
            android:text="@string/multiply"
            android:textColor="@color/eerieblack"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/round_square"
            android:backgroundTint="@color/faintblue"
            android:textColor="@color/eerieblack"
            android:textSize="20sp"
            android:text="@string/division" />

    </LinearLayout>

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/result"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_margin="20dp"
        android:textSize="24sp" />


</LinearLayout>